# cg3d-maya-core

./: .gitignore  README.md  gurulib.wpr  gurulib.wpu  maya-core.wpr  maya-core_10.wpr  pyproject.toml
cg3Dguru/user_data/: core.py
cg3Dguru/utils/: menu_maker.py
cg3dguru/animation/: fbx.py
cg3dguru/udata/: core.py
cg3dguru/ui/: core.py
cg3dguru/user_data/: core.py  editor.py  user_data.ui
cg3dguru/utils/: drop_installer.py  math.py
guru/modeling/: fingers.py
guru/rigging/: stretchy_spline.py
guru/ui/: core.py
guru/user_data/: core.py  user_data.ui
guru/utils/: drop_installer.py  math.py
src/cg3dguru/: __init__.py
src/cg3dguru/animation/: fbx.py  hik.py
src/cg3dguru/udata/: core.py
src/cg3dguru/ui/: core.py
src/cg3dguru/utils/: __init__.py  core.py  drop_installer.py
