[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cg3d_guru_lib"
version = "0.5.0"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]
description = "A collection of various utility script for Maya"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymel>=1.3",
]

[project.urls]
"Homepage" = "https://github.com/Nathanieljla/cg3d-guru-lib"
