[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cg3d-maya-core"
version = "0.6.4"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]

description = "A collection of Maya functions and classes that can easily be pulled into other projects/modules"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymel>=1.3",
]

[project.urls]
"Homepage" = "https://github.com/Nathanieljla/cg3d-maya-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ui"]
